--- a/components/menu/demo/api.html
+++ b/components/menu/demo/api.html
@@ -60,9 +60,9 @@
       </auro-radio-group>
       <auro-radio-group required horizontal name="size">
         <span slot="legend">Size</span>
-        <auro-radio label="medium(default)" value="medium" checked></auro-radio>
-        <auro-radio label="large" value="large"></auro-radio>
-        <auro-radio label="xlarge" value="xlarge"></auro-radio>
+        <auro-radio label="medium(default)" value="md" checked></auro-radio>
+        <auro-radio label="large" value="lg"></auro-radio>
+        <auro-radio label="xlarge" value="xl"></auro-radio>
       </auro-radio-group>
 
     </header>
