fix: default to classic layout and shape in dropdown and select

--- a/components/dropdown/apiExamples/classic/basic-ondark.html
+++ b/components/dropdown/apiExamples/classic/basic-ondark.html
@@ -1,4 +1,4 @@
-<auro-dropdown onDark id="classicOnDark" layout="classic" shape="classic" chevron aria-label="Label content for screen reader">
+<auro-dropdown onDark id="classicOnDark" chevron aria-label="Label content for screen reader">
   <div style="padding: var(--ds-size-150);">
     Lorem ipsum solar
     <br />
