--- a/components/dropdown/apiExamples/classic/basic.html
+++ b/components/dropdown/apiExamples/classic/basic.html
@@ -1,4 +1,4 @@
-<auro-dropdown id="classic" layout="classic" shape="classic" chevron aria-label="Label content for screen reader">
+<auro-dropdown id="classic" chevron aria-label="Label content for screen reader">
   <div style="padding: var(--ds-size-150);">
     Lorem ipsum solar
     <br />
