--- a/components/select/apiExamples/classic/basic.html
+++ b/components/select/apiExamples/classic/basic.html
@@ -1,4 +1,4 @@
-<auro-select layout="classic" shape="classic" placeholder="Placeholder content">
+<auro-select placeholder="Placeholder content">
   <span slot="bib.fullscreen.headline">Bib Header</span>
   <span slot="label">Name</span>
   <auro-menu>
