--- a/components/select/apiExamples/classic/basic-ondark.html
+++ b/components/select/apiExamples/classic/basic-ondark.html
@@ -1,4 +1,4 @@
-<auro-select onDark layout="classic" shape="classic" placeholder="Placeholder content">
+<auro-select onDark placeholder="Placeholder content">
   <span slot="bib.fullscreen.headline">Bib Header</span>
   <span slot="label">Name</span>
   <auro-menu>
