fix: set default `size`, `shape` to `""` on menu

--- a/components/dropdown/src/styles/classic/bibStyles.scss
+++ b/components/dropdown/src/styles/classic/bibStyles.scss
@@ -69,8 +69,9 @@
       border-radius: unset;
     }
 
-    &[class*="shape-pill"] {
-      border-radius: var(--ds-size-300, vac.$ds-size-300);
+    &[class*="shape-pill"],
+    &[class*="shape-snowflake"] {
+      border-radius: 30px;
     }
   }
 }
