--- a/components/menu/demo/api.html
+++ b/components/menu/demo/api.html
@@ -54,8 +54,8 @@
     <header oninput="onRadioInput(event)">
       <auro-radio-group required horizontal name="shape">
         <span slot="legend">Shape</span>
-        <auro-radio label="box" value="box"></auro-radio>
-        <auro-radio label="rounded" value="rounded" checked></auro-radio>
+        <auro-radio label="box" value="box" checked></auro-radio>
+        <auro-radio label="rounded" value="rounded"></auro-radio>
         <auro-radio label="pill" value="pill"></auro-radio>
       </auro-radio-group>
       <auro-radio-group required horizontal name="size">
