--- a/components/menu/src/styles/default/style-menuoption.scss
+++ b/components/menu/src/styles/default/style-menuoption.scss
@@ -17,7 +17,6 @@
   .wrapper {
     display: flex;
     align-items: center;
-
     padding-right: var(--ds-size-200, vac.$ds-size-200);    
     padding-left: calc(var(--ds-size-150, vac.$ds-size-150) + 24px + var(--ds-size-100, vac.$ds-size-100));
     padding-top: var(--ds-size-50, vac.$ds-size-50);
@@ -25,12 +24,17 @@
 
     -webkit-tap-highlight-color: transparent;
 
+    &[class*="shape-box"],
+    &[class*="shape-snowflake"] {
+      border-radius: unset;
+    }
+
     &[class*="shape-rounded"] {
       border-radius: var(--ds-size-100, vac.$ds-size-100);
     }
 
     &[class*="shape-pill"] {
-      border-radius: var(--ds-size-150, vac.$ds-size-150);
+      border-radius: 30px;
     }
 
     &[class*="-lg"] {
