fix: set default `size`, `shape` to `""` on menu

--- a/components/menu/src/styles/default/style-menuoption.scss
+++ b/components/menu/src/styles/default/style-menuoption.scss
@@ -29,8 +29,9 @@
       border-radius: unset;
     }
 
-    &[class*="shape-rounded"] {
-      border-radius: var(--ds-size-100, vac.$ds-size-100);
+    &[class*="shape-box"],
+    &[class*="shape-snowflake"] {
+      border-radius: unset;
     }
 
     &[class*="shape-pill"] {
