feat!: datepicker style and state fixes
Not complete yet, but more usable

--- a/components/datepicker/apiExamples/emphasized/basic.html
+++ b/components/datepicker/apiExamples/emphasized/basic.html
@@ -1,10 +1,12 @@
-<auro-datepicker style="width: 306px" layout="snowflake" shape="snowflake" ondark placeholder="MM/DD">
+<auro-datepicker format="mm/dd/yy" style="width: 306px" layout="snowflake" shape="snowflake" ondark placeholder="MM/DD">
+  <span slot="label">Date</span>
   <span slot="bib.fullscreen.headline">Datepicker Headline</span>
   <span slot="fromLabel">Choose a date</span>
   <span slot="bib.fullscreen.dateLabel">Choose a date</span>
 </auro-datepicker>
 
-<auro-datepicker disabled="" range style="width: 306px" layout="snowflake" shape="snowflake" ondark placeholder="MM/DD">
+<auro-datepicker format="mm/dd/yy" range style="width: 306px" layout="snowflake" shape="snowflake" ondark placeholder="MM/DD">
+  <span slot="label">Dates</span>
   <span slot="bib.fullscreen.headline">Datepicker Headline</span>
   <span slot="fromLabel">Choose a date</span>
   <span slot="bib.fullscreen.dateLabel">Choose a date</span>
