--- a/components/counter/src/styles/counter-group.scss
+++ b/components/counter/src/styles/counter-group.scss
@@ -7,27 +7,59 @@
 @use "@aurodesignsystem/design-tokens/dist/legacy/auro-classic/SCSSVariables" as vac;
 @use '@aurodesignsystem/webcorestylesheets/src/breakpoints';
 
-/* stylelint-disable no-descending-specificity, selector-max-attribute, selector-nest-combinators */
-
-:host {
-  position: relative;
-  display: block;
-}
-
-[slot="trigger"], ::slotted([slot="valueText"]) {
-  display: block;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-
-[auro-dropdown] {
-  display: block;
-
-  &::part(trigger) {
-    max-height: var(--ds-size-300, #{vac.$ds-size-300});
+:host(:not([layout="classic"])) {
+  [auro-dropdown] {
+    --ds-auro-dropdown-trigger-border-color: var(--ds-auro-counter-trigger-border-color);
+    --ds-auro-dropdown-trigger-background-color: var(--ds-auro-counter-trigger-background-color);
+    --ds-auro-dropdown-trigger-container-color: var(--ds-auro-counter-trigger-background-color);
   }
 }
 
-#slotHolder{
-  display: none;
+:host {
+
+  .triggerContent {
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    padding: 0 8px 0 24px; // TODO: update to use design token
+
+    .mainContent {
+
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      justify-content: center;
+    
+      label {
+        font-size: var(--ds-text-body-size-default, vac.$ds-text-body-size-default);
+        line-height: 20px;
+    
+        &.filled {
+    
+          font-size: var(--ds-text-body-size-xs, vac.$ds-text-body-size-xs);
+        }
+      }
+    
+      slot[name="valueText"] {
+        font-size: var(--ds-text-body-size-default, vac.$ds-text-body-size-default);
+        white-space: nowrap;
+        overflow-x: hidden;
+        text-overflow: ellipsis;
+      }
+    }
+  }
+
+  .counters {
+    display: flex;
+    flex-direction: column;
+    gap: var(--ds-size-300, vac.$ds-size-300);
+
+    ::slotted(auro-counter:not(:first-of-type)) {
+      padding-top: var(--ds-size-300, vac.$ds-size-300);
+      border-top-width: 1px;
+      border-top-style: solid;
+    }
+  }
 }
