docs: update docs to add example for snowflake

--- a/components/counter/apiExamples/onDark-dropdown-snowflake.html
+++ b/components/counter/apiExamples/onDark-dropdown-snowflake.html
@@ -1,9 +1,8 @@
 <!-- Example of counter-group properties -->
-<auro-counter-group max="10" min="2" isDropdown>
+<auro-counter-group max="10" min="2" isDropdown layout="snowflake" ondark>
   <div slot="bib.fullscreen.headline">Group fullscreen label</div>
-  <div slot="label">Group with all properties</div>
+  <div slot="label">Snowflake Dropdown Group</div>
   <div slot="helpText">Total must be between 2-10</div>
-  <div slot="valueText">Custom total display</div>
   
   <auro-counter>
     Counter 1
