--- a/components/counter/apiExamples/floaterConfig.html
+++ b/components/counter/apiExamples/floaterConfig.html
@@ -1,7 +1,7 @@
 <div style="width: 350px">
   <auro-counter-group isDropdown offset="20" placement="bottom-end">
     <div slot="bib.fullscreen.headline">Passengers</div>
-    <div slot="label">bottome-end bib with 20px offset</div>
+    <div slot="label">bottom-end bib with 20px offset</div>
     <auro-counter>
       Adults
       <span slot="description">18 years or older</span>
@@ -13,7 +13,7 @@
   </auro-counter-group>
   <auro-counter-group isDropdown offset="20" placement="bottom-end" noFlip>
     <div slot="bib.fullscreen.headline">Passengers</div>
-    <div slot="label">bottome-end bib with 20px offset and noFlip</div>
+    <div slot="label">bottom-end bib with 20px offset and noFlip</div>
     <auro-counter>
       Adults
       <span slot="description">18 years or older</span>
