--- a/components/counter/src/styles/counter-button-color.scss
+++ b/components/counter/src/styles/counter-button-color.scss
@@ -3,11 +3,11 @@
 
 // ---------------------------------------------------------------------
 
-/* stylelint-disable max-nesting-depth, scss/selector-nest-combinators, selector-max-pseudo-class */
+/* stylelint-disable max-nesting-depth, scss/selector-nest-combinators, selector-max-pseudo-class, selector-class-pattern */
 
 @use "@aurodesignsystem/design-tokens/dist/themes/alaska/SCSSVariables--alaska" as v;
 
-.auroButton {
+.auro-button {
   border-color: unset;
   background-color: var(--ds-auro-counter-control-background-color);
   -webkit-tap-highlight-color: var(--ds-auro-button-tap-color);
@@ -21,7 +21,7 @@
   }
 }
 
-:host([onDark]) .auroButton {
+:host([onDark]) .auro-button {
   --ds-auro-counter-control-background-color: var(--ds-advanced-color-button-tertiary-background-inverse, #{v.$ds-advanced-color-button-tertiary-background-inverse});
 
   @media (hover: hover) {
