--- a/components/counter/src/styles/counter-button.scss
+++ b/components/counter/src/styles/counter-button.scss
@@ -1,4 +1,4 @@
-// stylelint-disable selector-max-class
+// stylelint-disable selector-max-class, selector-class-pattern
 
 // Import Auro Sass variables
 @use "@aurodesignsystem/design-tokens/dist/legacy/auro-classic/SCSSVariables" as vac;
