--- a/components/datepicker/apiExamples/snowflake/ondark.html
+++ b/components/datepicker/apiExamples/snowflake/ondark.html
@@ -1,11 +1,11 @@
-<auro-datepicker format="mm/dd/yy" style="width: 306px" layout="snowflake" shape="snowflake" ondark placeholder="MM/DD">
+<auro-datepicker layout="snowflake" shape="snowflake" ondark placeholder="MM/DD">
   <span slot="label">Date</span>
   <span slot="bib.fullscreen.headline">Datepicker Headline</span>
   <span slot="fromLabel">Choose a date</span>
   <span slot="bib.fullscreen.dateLabel">Choose a date</span>
 </auro-datepicker>
 
-<auro-datepicker format="mm/dd/yy" range style="width: 306px" layout="snowflake" shape="snowflake" ondark placeholder="MM/DD">
+<auro-datepicker range layout="snowflake" shape="snowflake" ondark placeholder="MM/DD">
   <span slot="label">Dates</span>
   <span slot="bib.fullscreen.headline">Datepicker Headline</span>
   <span slot="fromLabel">Choose a date</span>
