--- a/components/datepicker/src/styles/snowflake/color.scss
+++ b/components/datepicker/src/styles/snowflake/color.scss
@@ -1,3 +1,6 @@
+@use "@aurodesignsystem/design-tokens/dist/legacy/auro-classic/SCSSVariables" as vac;
+@use "@aurodesignsystem/design-tokens/dist/themes/alaska/SCSSVariables--alaska" as v;
+
 :host([layout="snowflake"]) {
   &[disabled] {
     .mainContent label ::slotted(*) {
@@ -5,7 +8,26 @@
     }
   }
 
+  label {
+    color: var(--ds-basic-color-texticon-inverse-muted, v.$ds-basic-color-texticon-inverse-muted);
+  }
+
+  .inputDivider {
+    background-color: var(--ds-basic-color-texticon-inverse-muted, v.$ds-basic-color-texticon-inverse-muted);
+  }
+
   .error {
-    color: var(--ds-advanced-color-state-error-inverse, #f9a4a8)
+    color: var(--ds-advanced-color-state-error-inverse, v.$ds-advanced-color-state-error-inverse);
+  }
+
+  [auro-input] {
+    &::part(input)::placeholder {
+      color: var(--ds-basic-color-texticon-inverse-muted, v.$ds-basic-color-texticon-inverse-muted);
+    }
+  }
+
+  // designs call for no border when not active, focused, or in an error state
+  [auro-dropdown]:not(:is([error], .hasFocus))::part(wrapper) {
+    --ds-auro-dropdown-trigger-border-color: transparent;
   }
 }
