--- a/components/input/src/styles/classic/style.scss
+++ b/components/input/src/styles/classic/style.scss
@@ -13,6 +13,8 @@
   selector-no-qualifying-type
 */
 
+@use "@aurodesignsystem/design-tokens/dist/legacy/auro-classic/SCSSVariables" as vac;
+
 .layout-classic {
   display: flex;
   flex-direction: row;
@@ -28,7 +30,7 @@
 
 
     label {
-      padding-top: 4px;
+      padding-top: var(--ds-size-25, #{vac.$ds-size-25});
       cursor: text;
       font-size: var(--ds-text-body-size-xs);
       line-height: 20px;
@@ -37,7 +39,7 @@
 
     input {
       height: auto;
-      padding-bottom: 8px;
+      padding-bottom: var(--ds-size-50, #{vac.$ds-size-50});
       font-size: var(--ds-basic-text-body-default-font-size, 16px);
       line-height: var(--ds-basic-text-body-default-line-height, 24px);
       transition: all 0.3s cubic-bezier(0.215, 0.61, 0.355, 1);
@@ -61,11 +63,11 @@
 
   .accents {
     &.left {
-      padding-left: 8px;
+      padding-left: var(--ds-size-50, #{vac.$ds-size-50});
     }
 
     &.right {
-      padding-right: 8px;
+      padding-right: var(--ds-size-50, #{vac.$ds-size-50});
     }
   }
 
