--- a/components/counter/src/styles/counter-group.scss
+++ b/components/counter/src/styles/counter-group.scss
@@ -12,7 +12,7 @@
 
 :host(:not([layout="classic"])) {
   .triggerContent {
-    padding: 0 8px 0 24px; // TODO: update to use design token
+    padding: 0 var(--ds-size-50, vac.$ds-size-50) 0 var(--ds-size-150, vac.$ds-size-150);
   }
 }
 
