--- a/components/input/src/styles/classic/style.scss
+++ b/components/input/src/styles/classic/style.scss
@@ -14,6 +14,8 @@
   max-nesting-depth
 */
 
+@use "@aurodesignsystem/design-tokens/dist/legacy/auro-classic/SCSSVariables" as vac;
+
 .layout-classic {
   display: flex;
   flex-direction: row;
@@ -61,19 +63,19 @@
   .accents {
     .typeIcon {
       > * {
-        margin-left: 8px;
+        margin-left: var(--ds-size-50, vac.$ds-size-50);
       }
     }
 
     &.left {
-      padding-right: 8px;
+      padding-right: var(--ds-size-50, vac.$ds-size-50);
     }
 
     &.right {
-      padding-left: 8px;
+      padding-left: var(--ds-size-50, vac.$ds-size-50);
 
       .notification {
-        margin-right: 8px;
+        margin-right: var(--ds-size-50, vac.$ds-size-50);
       }
     }
   }
