--- a/components/datepicker/apiExamples/snowflake/ondark-range.html
+++ b/components/datepicker/apiExamples/snowflake/ondark-range.html
@@ -1,5 +1,5 @@
-<auro-datepicker style="width: 306px" layout="snowflake" shape="snowflake" placeholder="MM/DD">
-  <span slot="label">Date</span>
+<auro-datepicker range layout="snowflake" shape="snowflake" ondark placeholder="MM/DD">
+  <span slot="label">Dates</span>
   <span slot="bib.fullscreen.headline">Datepicker Headline</span>
   <span slot="fromLabel">Choose a date</span>
   <span slot="bib.fullscreen.dateLabel">Choose a date</span>
