--- a/components/counter/src/styles/style.scss
+++ b/components/counter/src/styles/style.scss
@@ -4,7 +4,7 @@
 // ---------------------------------------------------------------------
 
 // Support for fallback values
-@use "@aurodesignsystem/design-tokens/dist/themes/alaska/SCSSVariables--alaska" as v;
+// @use "@aurodesignsystem/design-tokens/dist/themes/alaska/SCSSVariables--alaska" as v;
 @use "@aurodesignsystem/design-tokens/dist/legacy/auro-classic/SCSSVariables" as vac;
 @use '@aurodesignsystem/webcorestylesheets/src/breakpoints';
 
