--- a/components/combobox/apiExamples/emphasized/basic.html
+++ b/components/combobox/apiExamples/emphasized/basic.html
@@ -1,4 +1,4 @@
-<auro-combobox layout="emphasized" shape="pill" size="xl" placeholder="Placeholder content" required ondark style="width: 249px;">
+<auro-combobox layout="emphasized" value="Oranges" shape="pill" size="xl" placeholder="Placeholder content" required ondark style="width: 249px;">
   <span slot="bib.fullscreen.headline">Bib Header</span>
   <span slot="label">Name</span>
   <auro-menu>
@@ -17,37 +17,5 @@
       <div class="mainText">Apples</div>
       <div class="subText">Fruit</div>
     </div>
-  </span>
-</auro-combobox>
-
-<auro-combobox layout="emphasized" shape="pill-left" size="xl" placeholder="Placeholder content" required ondark style="width: 249px;">
-  <span slot="bib.fullscreen.headline">Bib Header</span>
-  <span slot="label">Name</span>
-  <auro-menu>
-    <auro-menuoption value="Apples" id="option-0">Apples</auro-menuoption>
-    <auro-menuoption value="Oranges" id="option-1">Oranges</auro-menuoption>
-    <auro-menuoption value="Peaches" id="option-2">Peaches</auro-menuoption>
-    <auro-menuoption value="Grapes" id="option-3">Grapes</auro-menuoption>
-    <auro-menuoption value="Cherries" id="option-4">Cherries</auro-menuoption>
-    <auro-menuoption static nomatch>No matching option</auro-menuoption>
-  </auro-menu>
-  <span slot="helpText">
-    Help text - Lorem ipsum solar lorem ipsum solar
-  </span>
-</auro-combobox>
-
-<auro-combobox layout="emphasized" shape="pill-right" size="xl" placeholder="Placeholder content" required ondark style="width: 249px;">
-  <span slot="bib.fullscreen.headline">Bib Header</span>
-  <span slot="label">Name</span>
-  <auro-menu>
-    <auro-menuoption value="Apples" id="option-0">Apples</auro-menuoption>
-    <auro-menuoption value="Oranges" id="option-1">Oranges</auro-menuoption>
-    <auro-menuoption value="Peaches" id="option-2">Peaches</auro-menuoption>
-    <auro-menuoption value="Grapes" id="option-3">Grapes</auro-menuoption>
-    <auro-menuoption value="Cherries" id="option-4">Cherries</auro-menuoption>
-    <auro-menuoption static nomatch>No matching option</auro-menuoption>
-  </auro-menu>
-  <span slot="helpText">
-    Help text - Lorem ipsum solar lorem ipsum solar
   </span>
 </auro-combobox>
